# fr

./: .gitignore  README.md  Новый текстовый документ.txt
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: admin.py  auth.py  domains.py  health.py  proxies.py
backend/app/core/: config.py
backend/app/db/: migrations.py  models.py  session.py
backend/app/schemas/: admin.py  auth.py  common.py  domain.py  log.py  proxy.py
backend/app/services/: __init__.py  app_settings.py  audit.py  bootstrap.py  domain_parser.py  logs.py  masking.py  notifier.py  proxy_utils.py  security.py
backend/app/worker/: __init__.py  checks.py  decision.py  engine.py  registry.py  scheduling.py
backend/tests/: test_decision.py  test_domain_parser.py  test_registry.py  test_scheduling.py
deploy/: domain-drop-monitor.service  nginx-fr-domain-monitor.conf
docs/superpowers/plans/: 2026-04-14-universal-domain-monitor.md
docs/superpowers/specs/: 2026-04-14-universal-domain-monitor-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css
